# SGD

./: .gitignore  README.md
lab_1/src/: LittlePlayer.h  main.cpp
lab_racer/: CMakeLists.txt
lab_racer/src/: LittlePlayer.cpp  LittleRacer.cpp  LittleRacer.h  main.cpp
lab_racer/src/utils/: MyText.cpp  MyText.h  general.h  my_math.h
